Fix MongoDB connection and typo in main function

--- a/backand/.env
+++ b/backand/.env
@@ -1,5 +1,6 @@
-MONGO_URL=mongodb+srv://td3393409:f5tNQYL4cCVcS1ec@cluster0.ffagsgd.mongodb.net/sessionDb?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://td3393409:f5tNQYL4cCVcS1ec@cluster0.ffagsgd.mongodb.net/sessionDb?tls=true&appName=Cluster0
 PORT=4000
+
 
 
 
