Fix MongoDB URI and connection logic

--- a/backand/.env
+++ b/backand/.env
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb+srv://td3393409:f5tNQYL4cCVcS1ec@cluster0.ffagsgd.mongodb.net/sessionDb?tls=true&appName=Cluster0
+MONGO_URL=mongodb+srv://td3393409:f5tNQYL4cCVcS1ec@cluster0.ffagsgd.mongodb.net/sessionDb?retryWrites=true&w=majority
 PORT=4000
 
 
